Added optimized and recently changed files

--- a/collabs.html
+++ b/collabs.html
@@ -23,11 +23,11 @@
 	
 	<h1 class="one">Our Collaborators</h1>
 	
-	<div class="flex">
-		<a href="https://www.khanacademy.org/"><img class="imgs" src="imgs/kacademy.png" width="300px" height="300px"></a>
-		<a href="https://study.com/"><img class="imgs" src="imgs/studydotcom.jpg" width="300px" height="300px"></a>
-		<a href="https://libretexts.org/img"><img class="imgs" src="imgs/libretexts.png" width="300px" height="300px"></a>
-	</div>
+	<article class="flex">
+		<a href="https://www.khanacademy.org/"><div class="kacad"></div></a>
+		<a href="https://www.deped.gov.ph/"><div class="deped"></div></a>
+		<a href="https://libretexts.org/img"><div class="ltexts"></div></a>
+    </article>
     <footer>
         <p>JBSR Foundation</p>
     </footer>
