--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="imgs/logo.png" width="80px" height="80px"></a>
+        <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
 		<h1>World Scholarship Fund</h1>
         <input class="rightalign" type="text" placeholder="Search Resources">
     </header>
@@ -21,24 +21,20 @@
 		</div>
     </nav>
 	
-    <div id="grid">
+    <section id="grid">
 		<img id="indeximg1" src="imgs/learning.jpg">
 		<div>
 			<p id="text">Education for All <br><span id="text2">This is a non-profit for bringing education to the world through donations and free online courses</span></p>
 			<a id="startnow" href="courses.html">Start Now</a>
 		</div>
-    </div>
+    </section>
 
-    <div id="img2div">
-        <img id="indeximg2" src="imgs/childwbook.jpg">
-        <img id="indeximg2" src="imgs/outside.jpg">
-			<div id="anywhere"> Study Anytime&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Anywhere</div>
-    </div>
+    <!--change this to Introduction video-->
+    <article id="introvid">
+        <iframe src="https://drive.google.com/file/d/1V8yZ0LkWyIHt-1ziNlju3qCS3FWZo6qp/preview" width="640" height="400" allow="autoplay"></iframe>
+    </article>
+	<!--close-->
 
-    <div>
-        
-    </div>
-	
     <footer>
         <p>JBSR Foundation</p>
     </footer>
