Uploaded updated site
Added required changes

--- a/collabs.html
+++ b/collabs.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/collabs.css">
 </head>
 <body>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <header>
-        <a href="index.html"><img class="logo" src="imgs/logo.png" width="80px" height="80px"></a>
+        <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
 		<h1>World Scholarship Fund</h1>
         <input class="rightalign" type="text" placeholder="Search Resources">
     </header>
@@ -20,17 +21,23 @@
 			<a href="donate.html">Donate</a>
 		</div>
     </nav>
-	
-	<h1 class="one">Our Collaborators</h1>
-	
-	<article class="flex">
-		<a href="https://www.khanacademy.org/"><div class="kacad"></div></a>
-		<a href="https://www.deped.gov.ph/"><div class="deped"></div></a>
-		<a href="https://libretexts.org/img"><div class="ltexts"></div></a>
-    </article>
+	<!--close-->
+    <main>
+        <section>
+            <h1 class="one">Our Collaborators</h1>
+        </section>
+
+        <article id="flex">
+            <a href="https://www.khanacademy.org/"><div class="kacad"></div></a>
+            <a href=""><div class="rbplay"></div></a>
+            <a href="https://libretexts.org"><div class="ltexts"></div></a>
+        </article>
+    </main>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <footer>
         <p>JBSR Foundation</p>
     </footer>
+    <!--close-->
 </body>
 </html>
 
