--- a/donate.html
+++ b/donate.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/donate.css">
 </head>
 <body>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <header>
-        <a href="index.html"><img class="logo" src="imgs/logo.png" width="80px" height="80px"></a>
+        <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
 		<h1>World Scholarship Fund</h1>
         <input class="rightalign" type="text" placeholder="Search Resources">
     </header>
@@ -20,6 +21,7 @@
 			<a href="donate.html">Donate</a>
 		</div>
     </nav>
+	<!--close-->
 	
 	<h1 class="one">Help The Cause</h1>
 	
@@ -30,9 +32,11 @@
 		<a id="startnow" href="https://donate.khanacademy.org/give/419869/#!/donation/checkout?c_src2=Webapp.header">Submit Donation</a>
 	</div>
 	
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <footer>
         <p>JBSR Foundation</p>
     </footer>
+    <!--close-->
 </body>
 </html>
 
