--- a/courses.html
+++ b/courses.html
@@ -6,8 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/courses.css">
 </head>
 <body>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <header>
-        <a href="index.html"><img class="logo" src="imgs/logo.png" width="80px" height="80px"></a>
+        <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
 		<h1>World Scholarship Fund</h1>
         <input class="rightalign" type="text" placeholder="Search Resources">
     </header>
@@ -20,23 +21,34 @@
 			<a href="donate.html">Donate</a>
 		</div>
     </nav>
-	
-	<h1 class="one">Start Your Learning Journey</h1>
-	
-	<div class="flex">
-		<h2>STEM</h2>
-			<div>
-				
-			</div>
-		<hr>
-		<h2>Humanities</h2>
-		<hr>
-		<h2>Life Skills</h2>
-	</div>
-	
+	<!--close-->
+	<main>
+        <section>
+            <h1 class="one">Start Your Learning Journey</h1>
+        </section>
+        
+        <section>
+            <div class="flex">
+                <h2>Audiobooks</h2>
+                    <div>
+                        <p>STEM: An industry by R. B. Plays</p>
+                        <audio controls autoplay>
+                            <source src="multimed/placeholder.mp3" type="audio/mpeg">
+                            Your browser does not support the audio element.
+                          </audio>
+                    </div>
+                <hr>
+                <h2>Humanities</h2>
+                <hr>
+                <h2>Life Skills</h2>
+            </div>
+        </section>
+	</main>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <footer>
         <p>JBSR Foundation</p>
     </footer>
+    <!--close-->
 </body>
 </html>
 
