--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>World Scholarship Fund</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/wsfstylesheet.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/singleuse.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 </head>
 <body>
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <header>
         <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
 		<h1>World Scholarship Fund</h1>
@@ -20,12 +21,15 @@
 			<a href="donate.html">Donate</a>
 		</div>
     </nav>
-	
+	<!--close-->
+
     <section id="grid">
 		<img id="indeximg1" src="imgs/learning.jpg">
 		<div>
 			<p id="text">Education for All <br><span id="text2">This is a non-profit for bringing education to the world through donations and free online courses</span></p>
-			<a id="startnow" href="courses.html">Start Now</a>
+            <div id="startnow">
+			    <a href="courses.html">Start Now</a>
+            </div>
 		</div>
     </section>
 
@@ -35,9 +39,11 @@
     </article>
 	<!--close-->
 
+    <!--THIS IS GOOD NA, DO NOT TOUCH-->
     <footer>
         <p>JBSR Foundation</p>
     </footer>
+    <!--close-->
 </body>
 </html>
 
