Added quiz feature in "Courses" page

--- a/aboutus.html
+++ b/aboutus.html
@@ -25,17 +25,17 @@
 	
     <!--ABOUT-->
 	<section class="aboutus">
-		<h1 class="one">About the Fund</h1>
-		<p class="main"> We started out as a small non-profit based in Davao, trying to help teachers and parents of local schools give the best education possible for the next generation. After many years of growth, we eventually got the funding to go worldwide. This is all possible thanks to donations from the JBSR foundation. </p>
+		<h1 class="headTxt">About the Fund</h1>
+		<p class="mainTxt"> We started out as a small non-profit based in Davao, trying to help teachers and parents of local schools give the best education possible for the next generation. After many years of growth, we eventually got the funding to go worldwide. This is all possible thanks to donations from the JBSR foundation. </p><br>
 		
-		<p class="main">As we started to expand, we realized that in order to help everyone, there needs to be a space for learning online. That is what our secondary mission is. With our wide range of courses in STEM, the humanities, as well as basic life skills, anyone can learn anything, anywhere.</p>
+		<p class="mainTxt">As we started to expand, we realized that in order to help everyone, there needs to be a space for learning online. That is what our secondary mission is. With our wide range of courses in STEM, the humanities, as well as basic life skills, anyone can learn anything, anywhere.</p>
     </section>
 	<!--close-->
 
     <!--GOALS-->
 	<section class="aboutus">
-		<h1 class="one">Our Goals</h1>
-		<p class="main"> The fund strives to provide free quality education to all students, no matter the circumstances. That is why our new Research and Development division is currently doing studies on how to best enhance a student's learning experience.</p>
+		<h1 class="headTxt">Our Goals</h1>
+		<p class="mainTxt"> The fund strives to provide free quality education to all students, no matter the circumstances. That is why our new Research and Development division is currently doing studies on how to best enhance a student's learning experience.</p>
     </section>
     <!--close-->
     
