--- a/collabs.html
+++ b/collabs.html
@@ -24,7 +24,7 @@
 	<!--close-->
     <main>
         <section>
-            <h1 class="one">Our Collaborators</h1>
+            <h1 class="headTxt">Our Collaborators</h1>
         </section>
 
         <article id="flex">
