--- a/courses.html
+++ b/courses.html
@@ -24,24 +24,24 @@
 	<!--close-->
 	<main>
         <section>
-            <h1 class="one">Start Your Learning Journey</h1>
+            <h1 class="headTxt">Start Your Learning Journey</h1>
         </section>
         
-        <section>
-            <div class="flex">
-                <h2>Audiobooks</h2>
-                    <div>
-                        <p>STEM: An industry by R. B. Plays</p>
-                        <audio controls autoplay>
-                            <source src="multimed/placeholder.mp3" type="audio/mpeg">
-                            Your browser does not support the audio element.
-                          </audio>
-                    </div>
-                <hr>
-                <h2>Humanities</h2>
-                <hr>
-                <h2>Life Skills</h2>
-            </div>
+        <section class="flex">
+        <ul>
+            <li>Audiobooks</li>
+                <p>STEM: An industry by R. B. Plays</p>
+                <audio controls autoplay>
+                    <source src="multimed/placeholder.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            <li>Videos</li>
+            <li>Articles and Reading Material</li>
+            <li>Quizzes</li>
+                <div id="sdg">
+                    <a href="quiz/sdgquizq1.html">Learn About SDG 4</a>
+                </div>
+        </ul>
         </section>
 	</main>
     <!--THIS IS GOOD NA, DO NOT TOUCH-->
