--- a/donate.html
+++ b/donate.html
@@ -23,9 +23,9 @@
     </nav>
 	<!--close-->
 	
-	<h1 class="one">Help The Cause</h1>
+	<h1 class="headTxt">Help The Cause</h1>
 	
-	<p class="main">Anything you can spare helps this fund a lot. You can donate and help others in their own journey in education.</p>
+	<p class="mainTxt">Anything you can spare helps this fund a lot. You can donate and help others in their own journey in education.</p>
 	<div class="flex">
 		<label class="donate" for="other">Your Donation Here:<label>
 		<input type="number" id="other" name="other">
