--- a/template.html
+++ b/template.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Our Partners</title>
+    <title>World Scholarship Fund</title>
     <link rel="stylesheet" type="text/css" href="style/main.css">
-    <link rel="stylesheet" type="text/css" href="style/collabs.css">
 </head>
 <body onwheel="buttonAppear()">
     <!--THIS IS GOOD NA, DO NOT TOUCH-->
@@ -31,17 +30,6 @@
     <a id="uppies" onclick="toTop(); buttonDisappear()"> To Top &uArr;</a>
 	<!--close-->
 
-    <main>
-        <section>
-            <h1 class="headText" style="margin:40px;">Our Collaborators</h1>
-        </section>
-
-        <article class="flex">
-            <a href="https://www.khanacademy.org/"><div class="kacad"></div></br><h2>Khan Academy</h2></a>
-            <a href=""><div class="rbplay"></div></br><h2>RBPlays</h2></a>
-            <a href="https://libretexts.org"><div class="ltexts"></div></br><h2>LibreTexts</h2></a>
-        </article>
-    </main>
 </body>
 <script src="scripts/main.js"></script>
 </html>
