--- a/aboutus.html
+++ b/aboutus.html
@@ -2,49 +2,91 @@
 <html>
 <head>
     <title>About Us</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/wsfstylesheet.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/aboutus.css">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <link rel="stylesheet" type="text/css" href="style/aboutus.css">
 </head>
-<body>
+<body onwheel="buttonAppear()">
     <!--THIS IS GOOD NA, DO NOT TOUCH-->
-    <header>
-        <a href="index.html"><img id="logo" src="imgs/logo.png" width="80px" height="80px"></a>
-		<h1>World Scholarship Fund</h1>
-        <input class="rightalign" type="text" placeholder="Search Resources">
+    <header class="wrapperHead">
+        <span onclick="openNav()">&#9776</span>
+
+        <div style="display:flex; align-items:center;">
+            <a href="index.html" style="padding: 0 2em;"><img id="logo" src="pics/logo.png" width="80px" height="80px"></a>
+            <a href="index.html" style="padding: 0; color: white;"><h1 class="headText" style="cursor: pointer;">World Scholarship Fund</h1></a>
+        </div>
+
+        <h3 class="headText register"><a class="register" href="register.html">Register</a></h3>
     </header>
 	
-    <nav>
-        <a href="aboutus.html">About Us</a>
-        <a href="collabs.html">Collaborators</a>
-        <a href="courses.html">Courses</a>
-		<div class="rightalign">
-			<a href="donate.html">Donate</a>
-		</div>
+    <nav id="sideNav">
+        <a onclick="closeNav()" style="cursor: pointer; text-align: right; float: right; font-size: 2em; color: white;">&times;</a>
+        <ul>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="collabs.html">Collaborators</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="donate.html">Donate</a></li>
+        </ul>
     </nav>
+
+    <a id="uppies" onclick="toTop(); buttonDisappear()"> To Top &uArr;</a>
 	<!--close-->
-	
+
     <!--ABOUT-->
 	<section class="aboutus">
-		<h1 class="headTxt">About the Fund</h1>
-		<p class="mainTxt"> We started out as a small non-profit based in Davao, trying to help teachers and parents of local schools give the best education possible for the next generation. After many years of growth, we eventually got the funding to go worldwide. This is all possible thanks to donations from the JBSR foundation. </p><br>
+		<h1 class="headText">About the Fund</h1>
+		<p class="bodyText"> We started out tutoring in our own college, trying to help students understand lessons no matter their circumstances. We created a website to reach out to other people and schools, sharing our resources with schools and students. After many years of growth, we eventually started WSF as a non-profit, bringing education worldwide.</p><br>
 		
-		<p class="mainTxt">As we started to expand, we realized that in order to help everyone, there needs to be a space for learning online. That is what our secondary mission is. With our wide range of courses in STEM, the humanities, as well as basic life skills, anyone can learn anything, anywhere.</p>
+		<p class="bodyText">As we started to expand, we realized that in order to help everyone, there needs to be a space for learning online. That is what our secondary mission is. With our wide range of courses in STEM, the humanities, as well as basic life skills, anyone can learn anything, anywhere.</p>
     </section>
 	<!--close-->
 
     <!--GOALS-->
 	<section class="aboutus">
-		<h1 class="headTxt">Our Goals</h1>
-		<p class="mainTxt"> The fund strives to provide free quality education to all students, no matter the circumstances. That is why our new Research and Development division is currently doing studies on how to best enhance a student's learning experience.</p>
+		<h1 class="headText">Our Goals</h1>
+		<p class="bodyText"> The fund strives to provide free quality education to all students, no matter the circumstances. That is why our new Research and Development division is currently doing studies on how to best enhance a student's learning experience.</p>
     </section>
     <!--close-->
-    
-    <!--THIS IS GOOD NA, DO NOT TOUCH-->
-    <footer>
-        <p>JBSR Foundation</p>
-    </footer>
+
+    <!--WHAT WE'VE DONE-->
+    <section class="aboutus">
+		<h1 class="headText">What We've Done</h1>
+        <table id="wwd">
+            <tr>
+                <td><a href="https://www.unicef.org/documents/reading-corners-are-transforming-literacy-senegal"><img class="wwdPics" src="pics/senegal.jpeg"></a></td>
+                <td class="bodyText"><a href="https://www.unicef.org/documents/reading-corners-are-transforming-literacy-senegal"><div class="wwdText"><h3>Reading corners are transforming literacy in Senegal</h3></br><p>In Senegal, too many children are struggling to master the foundational skill of reading. Only one in three ...</p></div></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://www.unicef.org/documents/multi-sectoral-programme-improve-nutrition-school-aged-adolescents-malawi"><img class="wwdPics" src="pics/malawi.jpeg"></a></td>
+                <td class="bodyText"><a href="https://www.unicef.org/documents/multi-sectoral-programme-improve-nutrition-school-aged-adolescents-malawi"><div class="wwdText"><h3>Multi-sectoral programme to improve the nutrition of school-aged adolescents (Malawi)</h3></br><p>Poor nutrition and anaemia, in particular, negatively impact learning outcomes: in Malawi, undernourished children are more likely to ...</p></div></a></td>
+            </tr>
+            <tr>
+                <td><a href="https://www.unicef.org/documents/building-resilience-children-affected-war-ukraine-through-inclusive-sports"><img class="wwdPics" src="pics/ukraine.jpeg"></a></td>
+                <td class="bodyText"><a href="https://www.unicef.org/documents/building-resilience-children-affected-war-ukraine-through-inclusive-sports"><div class="wwdText"><h3>Building resilience of children affected by war in Ukraine through inclusive sports</h3></br><p>The ongoing conflict in Ukraine continues to have a devasting impact on children and families, with more than ...</p></div></a></td>
+            </tr>
+        </table>
+    </section>
     <!--close-->
+
+
+    <!--Founders-->
+    <section class="aboutus">
+        <h1 class="headText">Founders</h1>
+        <table id="founders">
+            <tr>
+                <td><img src="pics/Bob Bobbington.jpeg"></td>
+                <td><img src="pics/Josh Johnson.jpeg"></td>
+                <td><img src="pics/Tom Thomas.jpeg"></td>
+            </tr>
+            <tr>
+                <td class="bodyText">Bob Bobbington</td>
+                <td class="bodyText">Josh Johnson</td>
+                <td class="bodyText">Tom Thomas</td>
+            </tr>
+        </table>
+    </section>
+    
 </body>
+<script src="scripts/main.js"></script>
 </html>
 
 <!--jbsrizkewl-->
