--- a/collabs.html
+++ b/collabs.html
@@ -33,13 +33,13 @@
 
     <main>
         <section>
-            <h1 class="headText" style="margin:40px;">Our Collaborators</h1>
+            <h1 class="headText" style="margin:40px;">Our Partners</h1>
         </section>
 
         <article class="flex">
-            <a href="https://www.khanacademy.org/"><div class="kacad"></div></br><h2>Khan Academy</h2></a>
-            <a href=""><div class="rbplay"></div></br><h2>RBPlays</h2></a>
-            <a href="https://libretexts.org"><div class="ltexts"></div></br><h2>LibreTexts</h2></a>
+            <a href="https://www.khanacademy.org/"><div class="kacad"></div></a>
+            <a href=""><div class="rbplay"></div></a>
+            <a href="https://libretexts.org"><div class="ltexts"></div></a>
         </article>
     </main>
 </body>
