--- a/donate.html
+++ b/donate.html
@@ -31,6 +31,37 @@
     <a id="uppies" onclick="toTop(); buttonDisappear()"> To Top &uArr;</a>
 	<!--close-->
 
+    <div id="flex">
+        <section id="left">
+            <h1 class="headText">Donate Here</h1>
+            <p class="bodyText">Donating helps us fund more outreach projects and improve our website!</p>
+
+            <form>
+                <label class="bodyText" for="other">Your Donation Here:<label>
+                <input type="number" class="bodyText" name="other"></br></br>
+                <a class="courseStart" href="https://donate.khanacademy.org/give/419869/#!/donation/checkout?c_src2=Webapp.header">Submit Donation</a>
+            </form>
+        </section>
+
+        <section id="right">
+            <h1 class="headText">Become A Volunteer</h1>
+            <p class="bodyText">Help us bring more knowledge to the world by volunteering! Apply here!</p>
+
+            <form>
+                <label class="bodyText" for="other">Name: <label>
+                <input type="text" class="bodyText" name="other"></br></br>
+
+                <label class="bodyText" for="other">Phone Number: <label>
+                <input type="text" class="bodyText" name="other"></br></br>
+
+                <label class="bodyText" for="other">Email Adress: <label>
+                <input type="email" class="bodyText" name="other"></br></br>
+
+                <a class="courseStart" href="https://donate.khanacademy.org/give/419869/#!/donation/checkout?c_src2=Webapp.header">Apply</a>
+            </form>
+        </section>
+    </div>
+
 </body>
 <script src="scripts/main.js"></script>
 </html>
