--- a/collabs.html
+++ b/collabs.html
@@ -38,7 +38,7 @@
 
         <article class="flex">
             <a href="https://www.khanacademy.org/"><div class="kacad"></div></a>
-            <a href=""><div class="rbplay"></div></a>
+            <a href="https://eoanelijahmablas.github.io/Final-Project/index.html"><div class="rbplay"></div></a>
             <a href="https://libretexts.org"><div class="ltexts"></div></a>
         </article>
     </main>
